[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "upload-ami"
version = "0.1.0"
dependencies = [
    "boto3",
    "botocore",
]
[project.scripts]
upload-ami = "upload_ami.cli:main"
nuke = "upload_ami.nuke:main"
smoke-test = "upload_ami.smoke_test:main"
disable-image-block-public-access = "upload_ami.disable_image_block_public_access:main"
enable-regions = "upload_ami.enable_regions:main"
request-public-ami-quota-increase  = "upload_ami.request_public_ami_quota_increase:main"
