[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "upload-ami"
version = "0.1.0"
dependencies = [
    "boto3",
    "boto3-stubs[ec2,s3,sts,account,service-quotas]",
    "botocore-stubs",
]
[project.scripts]
upload-ami = "upload_ami.upload_ami:main"
nuke = "upload_ami.nuke:main"
smoke-test = "upload_ami.smoke_test:main"
disable-image-block-public-access = "upload_ami.disable_image_block_public_access:main"
enable-regions = "upload_ami.enable_regions:main"
request-public-ami-quota-increase  = "upload_ami.request_public_ami_quota_increase:main"
describe-images = "upload_ami.describe_images:main"
delete-images-by-name = "upload_ami.delete_images_by_name:main"
delete-deprecated-images = "upload_ami.delete_deprecated_images:main"
delete-orphaned-snapshots = "upload_ami.delete_orphaned_snapshots:main"
[tool.mypy]
strict=true
